Add missing spaces to README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-SeamCarving using Javascript
+Seam carving using Javascript
 
-This project shows seam carving in Javascript using Canvas andWeb workers.
+This project shows seam carving in Javascript using Canvas and Web Workers.
 For more information, please visit http://www.nparashuram.com/projects/seamcarving
